WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
218787
REGRESSION(
r269642
) [GStreamer][WebRTC] Unexpected results after update to M87
https://bugs.webkit.org/show_bug.cgi?id=218787
Summary
REGRESSION(r269642) [GStreamer][WebRTC] Unexpected results after update to M87
Lauro Moura
Reported
2020-11-10 21:04:49 PST
The list of tests below are crashing/failing/timing out after the libwebrtc update in
r269642
. Many of these cases are emitting error messages like: "Failed to set remote offer sdp: Failed to set remote video description send parameters for m-section with mid='1'." "Failed to set local offer sdp: Failed to set local video description recv parameters for m-section with mid='0'." Detailed crashlogs for the two crashes in the following comments. Link to the first GTK-Release test run with these failures:
https://build.webkit.org/results/GTK-Linux-64-bit-Release-Tests/r269646%20(16908)/results.html
# Crashes webrtc/direction-change.html webrtc/h264-packetization-mode.html # Failures webrtc/connection-state.html webrtc/createOfferAnswer.html webrtc/disable-encryption.html webrtc/ephemeral-certificates-and-cnames.html webrtc/libwebrtc/setLocalDescriptionCrash.html webrtc/msection-recycling.html webrtc/multi-audio.html webrtc/release-after-getting-track.html webrtc/remove-track.html webrtc/utf8-sdp.html webrtc/video-autoplay.html webrtc/video-getParameters.html webrtc/video-mediastreamtrack-stats.html webrtc/video-receivers.html webrtc/video-replace-track-to-null.html webrtc/video-stats.html # Timeouts fast/mediastream/RTCPeerConnection-statsSelector.html webrtc/concurrentVideoPlayback.html webrtc/h264-baseline.html webrtc/ice-candidate-sdpMLineIndex.html webrtc/peerconnection-page-cache-long.html webrtc/peerconnection-page-cache.html
Attachments
webrtc/direction-change.html crash log
(41.53 KB, text/plain)
2020-11-10 21:06 PST
,
Lauro Moura
no flags
Details
webrtc/h264-packetization-mode.html crash log
(27.82 KB, text/plain)
2020-11-10 21:06 PST
,
Lauro Moura
no flags
Details
Patch
(18.45 KB, patch)
2020-11-20 08:36 PST
,
Víctor M. Jáquez L.
no flags
Details
Formatted Diff
Diff
Patch
(18.50 KB, patch)
2020-11-20 08:41 PST
,
Víctor M. Jáquez L.
no flags
Details
Formatted Diff
Diff
Patch
(18.47 KB, patch)
2020-11-27 03:16 PST
,
Víctor M. Jáquez L.
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2020-11-10 21:06:27 PST
Created
attachment 413772
[details]
webrtc/direction-change.html crash log
Lauro Moura
Comment 2
2020-11-10 21:06:51 PST
Created
attachment 413773
[details]
webrtc/h264-packetization-mode.html crash log Similar to the first one.
Lauro Moura
Comment 3
2020-11-10 21:24:12 PST
Gardened in
r269672
.
Lauro Moura
Comment 4
2020-11-13 19:42:42 PST
webrtc/webrtc-transform.html --- /home/lauro/dev/WebKit/layout-test-results/webrtc/webrtc-transform-expected.txt +++ /home/lauro/dev/WebKit/layout-test-results/webrtc/webrtc-transform-actual.txt @@ -1,5 +1,8 @@ +CONSOLE MESSAGE: Unhandled Promise Rejection: InvalidAccessError: Failed to set remote offer sdp: Failed to set remote video description send parameters for m-section with mid='0'. +Harness Error (FAIL), message = Failed to set remote offer sdp: Failed to set remote video description send parameters for m-section with mid='0'. + PASS audio exchange with transform -PASS video exchange with transform +FAIL video exchange with transform promise_test: Unhandled rejection with value: "Test timed out" (Test was added in
r269764
)
Víctor M. Jáquez L.
Comment 5
2020-11-20 08:36:04 PST
Created
attachment 414680
[details]
Patch
Víctor M. Jáquez L.
Comment 6
2020-11-20 08:41:34 PST
Created
attachment 414683
[details]
Patch
Philippe Normand
Comment 7
2020-11-23 01:38:43 PST
Comment on
attachment 414683
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=414683&action=review
> Source/WebCore/platform/mediastream/libwebrtc/GStreamerVideoCommon.cpp:39 > + { { cricket::kH264FmtpProfileLevelId, *profileString }, > + { cricket::kH264FmtpLevelAsymmetryAllowed, "1" }, > + { cricket::kH264FmtpPacketizationMode, packetizationMode } });
Indentation looks odd here :)
Víctor M. Jáquez L.
Comment 8
2020-11-23 02:22:59 PST
(In reply to Philippe Normand from
comment #7
)
> Comment on
attachment 414683
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=414683&action=review
> > > Source/WebCore/platform/mediastream/libwebrtc/GStreamerVideoCommon.cpp:39 > > + { { cricket::kH264FmtpProfileLevelId, *profileString }, > > + { cricket::kH264FmtpLevelAsymmetryAllowed, "1" }, > > + { cricket::kH264FmtpPacketizationMode, packetizationMode } }); > > Indentation looks odd here :)
Indeed, but it's what webkit-patch accepted (4 spaces indentation).
EWS
Comment 9
2020-11-27 02:11:07 PST
Tools/Scripts/svn-apply failed to apply
attachment 414683
[details]
to trunk. Please resolve the conflicts and upload a new patch.
Víctor M. Jáquez L.
Comment 10
2020-11-27 03:16:22 PST
Created
attachment 414936
[details]
Patch
EWS
Comment 11
2020-11-27 03:58:02 PST
Committed
r270190
: <
https://trac.webkit.org/changeset/270190
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 414936
[details]
.
Radar WebKit Bug Importer
Comment 12
2020-11-27 03:59:15 PST
<
rdar://problem/71762858
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug