REGRESSION(r269642) [GStreamer][WebRTC] Unexpected results after update to M87 https://bugs.webkit.org/show_bug.cgi?id=218787

Patch by Víctor Manuel Jáquez Leal <vjaquez@igalia.com> on 2020-11-27
Reviewed by Philippe Normand.

Source/WebCore:

Describe more specifically the H264 SDP. It uses a hardcoded list with the minimun
requirement: ConstrainedBaseline and Baseline profiles which are supported by the video
decoders used in GStreamer.

No new tests required.

* platform/GStreamer.cmake:
* platform/mediastream/libwebrtc/GStreamerVideoCommon.cpp: Added.
(WebCore::createH264Format):
(WebCore::gstreamerSupportedH264Codecs):
* platform/mediastream/libwebrtc/GStreamerVideoCommon.h: Added.
* platform/mediastream/libwebrtc/GStreamerVideoDecoderFactory.cpp: Removed unused headers.
(WebCore::GStreamerVideoDecoder::AddDecoderIfSupported): Pass argument by reference.
(WebCore::GStreamerVideoDecoder::ConfigureSupportedDecoder): Instead of a single SDP returns
a vector of them.
* platform/mediastream/libwebrtc/GStreamerVideoEncoderFactory.cpp: Removed unused headers.
(WebCore::GStreamerVideoEncoder::AddCodecIfSupported): Pass argument by reference.
(WebCore::GStreamerVideoEncoder::ConfigureSupportedCodec): Instead of a single SDP returns
a vector of them and remove the unused argument.
(WebCore::GStreamerVideoEncoderFactory::GetSupportedFormats const):
* platform/mediastream/libwebrtc/GStreamerVideoEncoderFactory.h: Fixed a typo.

LayoutTests:

Update expectations with fixed tests.
Also fixed a typo.

* platform/glib/TestExpectations:
* platform/gtk/TestExpectations:

Canonical link: https://commits.webkit.org/231899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270190 268f45cc-cd09-0410-ab3c-d52691b4dbfc