Source/WebCore/platform/mediastream/libwebrtc/GStreamerVideoEncoderFactory.h
@@ -37,7 +37,7 @@ private:
     std::unique_ptr<webrtc::VideoEncoder> CreateVideoEncoder(const webrtc::SdpVideoFormat&) final;
     CodecInfo QueryVideoEncoder(const webrtc::SdpVideoFormat&) const override
     {
-        GST_FIXME("Detect wether the decoder is HW accelerated");
+        GST_FIXME("Detect whether the decoder is HW accelerated");
 
         return { false };
     }
